--- a/lappy_app/templates/components/navbar.html
+++ b/lappy_app/templates/components/navbar.html
@@ -50,7 +50,7 @@
                             class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-white px-1"
                             style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
                     </a>
-                    <a href="#" class="my-auto">
+                    <a href="{% url 'register' %}" class="my-auto">
                         <i class="fas fa-user fa-2x" style="color: #31363F"></i>
                     </a>
                 </div>
