--- a/lappy_app/templates/components/product_detail.html
+++ b/lappy_app/templates/components/product_detail.html
@@ -26,7 +26,7 @@
                       <div class="col-lg-6">
                           <h4 class="fw-bold mb-3">{{product.product_name}}</h4>
                           <p class="mb-3">Category: {{product.category_id}}</p>
-                          <h5 class="fw-bold mb-3">3,35 $</h5>
+                          <h5 class="fw-bold mb-3">Rp {{product.price}}</h5>
                           <div class="d-flex mb-4">
                               <i class="fa fa-star text-secondary"></i>
                               <i class="fa fa-star text-secondary"></i>
