--- a/lappy_app/templates/components/contact_detail.html
+++ b/lappy_app/templates/components/contact_detail.html
@@ -6,15 +6,15 @@
               <div class="col-12">
                   <div class="text-center mx-auto" style="max-width: 700px;">
                       <h1 class="text-primary">Get in touch</h1>
-                      <p class="mb-4">The contact form is currently inactive. Get a functional and working contact
+                      <!-- <p class="mb-4">The contact form is currently inactive. Get a functional and working contact
                           form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and
-                          you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                          you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
                   </div>
               </div>
               <div class="col-lg-12">
                   <div class="h-100 rounded">
                       <iframe class="rounded w-100" style="height: 400px;"
-                          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.33750346623!2d-73.97968099999999!3d40.6974881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1694259649153!5m2!1sen!2sbd"
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.0167521002118!2d106.92100807661632!3d-6.128447593858315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6a200883ed180f%3A0x7eb325a86075dfaa!2sJl.%20S.Citanduy%20Raya%2C%20RT.13%2FRW.1%2C%20Semper%20Bar.%2C%20Kec.%20Cilincing%2C%20Jkt%20Utara%2C%20Daerah%20Khusus%20Ibukota%20Jakarta!5e0!3m2!1sen!2sid!4v1711430259231!5m2!1sen!2sid" 
                           loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
               </div>
