--- a/lappy_app/templates/components/navbar.html
+++ b/lappy_app/templates/components/navbar.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
                     <a href="{% url 'landing' %}" class="nav-item nav-link active">Home</a>
-                    <a href="shop.html" class="nav-item nav-link">Shop</a>
+                    <!-- <a href="shop.html" class="nav-item nav-link">Shop</a>
                     <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -37,22 +37,27 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             <a href="404.html" class="dropdown-item">404 Page</a>
                         </div>
-                    </div>
+                    </div> -->
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                 </div>
                 <div class="d-flex m-3 me-0">
-                    <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
-                        data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa-solid fa-magnifying-glass"
-                            style="color: #31363F"></i></button>
-                    <a href="#" class="position-relative me-4 my-auto">
-                        <i class="fa fa-shopping-bag fa-2x" style="color: #31363F"></i>
-                        <span
-                            class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-white px-1"
+                    <!-- <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
+                        data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa-solid fa-magnifying-glass"></i></button> -->
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'cart' %}" class="position-relative me-4 my-auto">
+                        <i class="fa fa-shopping-bag fa-2x"></i>
+                        <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-white px-1"
                             style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
                     </a>
-                    <a href="{% url 'register' %}" class="my-auto">
-                        <i class="fas fa-user fa-2x" style="color: #31363F"></i>
+                    <a href="{% url 'logout' %}" class="my-auto">
+                        <!-- <i class="fas fa-user fa-2x"></i> -->
+                        Logout
                     </a>
+                    {% else %}
+                    <a href="{% url 'login' %}" class="my-auto">
+                        <!-- <i class="fas fa-user fa-2x"></i> -->Login
+                    </a>
+                    {% endif %}
                 </div>
             </div>
         </nav>
